--- a/assets/package.json
+++ b/assets/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "deploy": "webpack --mode production",
     "build": "webpack --mode development",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "format:js": "prettier --write {.,**}/*.{js,json}"
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
@@ -18,6 +19,7 @@
     "css-loader": "^0.28.10",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "prettier": "^1.16.4",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.4.0",
     "webpack-cli": "^2.0.10"
