--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -1,5 +1,11 @@
 {
     "presets": [
-        "@babel/preset-env"
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "entry"
+        }
+      ],
+      "@babel/preset-react"
     ]
 }
