--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,8 @@
     "deploy": "webpack --mode production",
     "build": "webpack --mode development",
     "watch": "webpack --mode development --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "format": "npm run format:ts && npm run format:ts && npm run format:css",
     "format:js": "prettier --write {.,**}/*.{js,json}",
     "format:ts": "prettier --write {.,**}/*.{ts,tsx} && tslint --fix -p .",
@@ -21,17 +23,20 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.11",
     "@types/phoenix": "^1.4.0",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
+    "jest": "^24.5.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
+    "ts-jest": "^24.0.0",
     "ts-loader": "^5.3.3",
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.18.0",
@@ -40,5 +45,30 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.4.0",
     "webpack-cli": "^2.0.10"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(src|tests)/.*\\.test\\.tsx?$",
+    "modulePaths": [
+      "<rootDir>/src"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "./tsconfig.test.json"
+      }
+    }
   }
 }
