--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
     "watch": "webpack --mode development --watch",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:update": "jest -u",
     "format": "npm run format:ts && npm run format:ts && npm run format:css",
     "format:js": "prettier --write {.,**}/*.{js,json}",
     "format:ts": "prettier --write {.,**}/*.{ts,tsx} && tslint --fix -p .",
