Display list of routes using React (#9)

--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
     "watch": "webpack --mode development --watch",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:update": "jest -u",
     "format": "npm run format:ts && npm run format:ts && npm run format:css",
     "format:js": "prettier --write {.,**}/*.{js,json}",
     "format:ts": "prettier --write {.,**}/*.{ts,tsx} && tslint --fix -p .",
@@ -27,14 +28,17 @@
     "@types/phoenix": "^1.4.0",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
+    "@types/react-test-renderer": "^16.8.1",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^1.0.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "jest": "^24.5.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.16.4",
+    "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
     "ts-jest": "^24.0.0",
     "ts-loader": "^5.3.3",
