--- a/assets/package.json
+++ b/assets/package.json
@@ -32,7 +32,6 @@
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^1.0.1",
-    "eslint-plugin-react-hooks": "^1.6.0",
     "jest": "^24.5.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.11.0",
@@ -45,6 +44,7 @@
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^3.6.0",
+    "tslint-react-hooks": "^2.0.0",
     "typescript": "^3.3.3333",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "4.4.0",
