Cache GTFS data in dev and test for faster loading

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ node_modules
 # secrets files as long as you replace their contents by environment
 # variables.
 /config/*.secret.exs
+
+# dev and test cache files for faster loading
+*.terms
