move data fetching into hooks, and tests

--- a/assets/package.json
+++ b/assets/package.json
@@ -58,6 +58,7 @@
     "webpack-cli": "^3.3.0"
   },
   "jest": {
+    "clearMocks": true,
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
