--- a/assets/package.json
+++ b/assets/package.json
@@ -41,6 +41,7 @@
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.16.4",
+    "react-hooks-testing-library": "^0.5.0",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
     "svg-inline-loader": "^0.8.0",
