--- a/assets/package.json
+++ b/assets/package.json
@@ -15,6 +15,7 @@
     "format:check": "prettier --check \"{.,**}/*.{js,json,ts,tsx,css,scss}\""
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.8.4",
