--- a/assets/package.json
+++ b/assets/package.json
@@ -31,6 +31,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.11",
     "@types/leaflet": "^1.4.4",
+    "@types/leaflet-rotatedmarker": "^0.2.1",
     "@types/phoenix": "^1.4.0",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
