--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "leaflet": "^1.5.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.8.4",
@@ -29,6 +30,7 @@
     "@types/enzyme": "^3.9.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.11",
+    "@types/leaflet": "^1.4.4",
     "@types/phoenix": "^1.4.0",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
