--- a/assets/package.json
+++ b/assets/package.json
@@ -22,6 +22,7 @@
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.1",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/phoenix": "^1.4.0",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
+    "@types/react-router-dom": "^4.3.4",
     "@types/react-test-renderer": "^16.8.1",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
