--- a/assets/package.json
+++ b/assets/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react-hooks": "^1.1.0",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.15",
@@ -49,7 +50,6 @@
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.16.4",
-    "react-hooks-testing-library": "^0.6.0",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
     "svg-inline-loader": "^0.8.0",
