--- a/assets/package.json
+++ b/assets/package.json
@@ -24,6 +24,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "resize-observer-polyfill": "^1.5.1",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
