--- a/assets/package.json
+++ b/assets/package.json
@@ -15,8 +15,8 @@
     "format:check": "prettier --check \"{.,**}/*.{js,json,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
     "@rehooks/component-size": "^1.0.3",
+    "core-js": "^3.4.1",
     "leaflet": "^1.5.1",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "phoenix": "file:../deps/phoenix",
@@ -28,9 +28,6 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.6.3",
     "@testing-library/react-hooks": "^3.2.1",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
@@ -41,7 +38,6 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.2",
     "@types/react-test-renderer": "^16.9.1",
-    "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
