Run jest in the UTC timezone

--- a/assets/package.json
+++ b/assets/package.json
@@ -95,6 +95,7 @@
       "ts-jest": {
         "tsConfig": "./tsconfig.test.json"
       }
-    }
+    },
+    "globalSetup": "./tests/global-setup.js"
   }
 }
