--- a/assets/package.json
+++ b/assets/package.json
@@ -88,7 +88,7 @@
       "\\.svg$": "<rootDir>/tests/testHelpers/svgStubber.js"
     },
     "setupFilesAfterEnv": [
-      "<rootDir>/tests/setup.ts"
+      "<rootDir>/tests/setup.tsx"
     ],
     "collectCoverage": true,
     "globals": {
