--- a/assets/package.json
+++ b/assets/package.json
@@ -25,7 +25,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-tooltip": "^4.1.0",
+    "react-tooltip": "^4.1.1",
     "resize-observer-polyfill": "^1.5.1",
     "whatwg-fetch": "^3.0.0"
   },
@@ -88,7 +88,7 @@
       "\\.svg$": "<rootDir>/tests/testHelpers/svgStubber.js"
     },
     "setupFilesAfterEnv": [
-      "<rootDir>/tests/setup.ts"
+      "<rootDir>/tests/setup.tsx"
     ],
     "collectCoverage": true,
     "globals": {
