--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@rehooks/component-size": "^1.0.3",
+    "@types/react-tabs": "^2.3.1",
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
     "leaflet-defaulticon-compatibility": "^0.1.1",
@@ -24,6 +25,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "react-tabs": "^3.1.0",
     "react-tooltip": "^4.2.5",
     "resize-observer-polyfill": "^1.5.1",
     "whatwg-fetch": "^3.0.0"
