--- a/assets/package.json
+++ b/assets/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "react-tabs": "^3.1.0",
     "react-tooltip": "^4.2.5",
     "resize-observer-polyfill": "^1.5.1",
     "whatwg-fetch": "^3.0.0"
@@ -38,6 +39,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
+    "@types/react-tabs": "^2.3.1",
     "@types/react-test-renderer": "^16.9.2",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
