--- a/assets/package.json
+++ b/assets/package.json
@@ -23,6 +23,8 @@
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.6.3",
+    "react-leaflet-control": "^2.1.2",
     "react-router-dom": "^5.1.2",
     "react-tabs": "^3.1.0",
     "react-tooltip": "^4.2.5",
@@ -38,6 +40,7 @@
     "@types/phoenix": "^1.4.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "@types/react-leaflet": "^2.5.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-tabs": "^2.3.1",
     "@types/react-test-renderer": "^16.9.2",
