--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "include": ["src", "tests"],
   "exclude": ["node_modules"],
+  "files": [
+    "src/skate.d.ts",
+    "src/schedule.d.ts",
+    "src/realtime.d.ts",
+    "src/minischedule.d.ts"
+  ],
   "compilerOptions": {
     /* Basic Options */
     "target": "es5",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
