--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ API_URL=
 API_KEY=
 GTFS_URL=
 BUSLOC_URL=
+SENTRY_DSN=
 SWIFTLY_AUTHORIZATION_KEY=
 SWIFTLY_REALTIME_VEHICLES_URL=
 TRIP_UPDATES_URL=
