--- a/assets/package.json
+++ b/assets/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
     "leaflet-defaulticon-compatibility": "^0.1.1",
+    "nosleep.js": "^0.11.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.13.1",
@@ -38,6 +39,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.4",
     "@types/leaflet": "^1.5.16",
+    "@types/nosleep.js": "^0.9.0",
     "@types/phoenix": "^1.4.4",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
