--- a/assets/package.json
+++ b/assets/package.json
@@ -59,6 +59,7 @@
     "svg-inline-loader": "^0.8.2",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
+    "terser-webpack-plugin": "^3.0.7",
     "ts-jest": "^25.5.1",
     "ts-loader": "^8.0.1",
     "tslint": "^6.1.2",
@@ -66,7 +67,6 @@
     "tslint-react": "^5.0.0",
     "tslint-react-hooks": "^2.2.2",
     "typescript": "^3.9.7",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12"
