--- a/assets/package.json
+++ b/assets/package.json
@@ -19,6 +19,7 @@
     "@sentry/react": "^5.27.4",
     "@tippyjs/react": "^4.2.3",
     "core-js": "^3.6.4",
+    "identity-obj-proxy": "^3.0.0",
     "leaflet": "^1.7.1",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "phoenix": "file:../deps/phoenix",
