--- a/assets/package.json
+++ b/assets/package.json
@@ -52,6 +52,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "file-loader": "^6.1.1",
+    "fishery": "^1.2.0",
     "jest": "^25.5.4",
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^4.14.1",
