build(ci): run Postgres during Elixir CI

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -24,6 +24,21 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
     needs: asdf
+    env:
+      DATABASE_PASSWORD: postgres
+      DATABASE_USER: postgres
+      DATABASE_NAME: skate_test
+      DATABASE_HOST: localhost
+    services:
+      postgres:
+        image: postgres
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_PASSWORD: ${{env.DATABASE_PASSWORD}}
+          POSTGRES_USER:  ${{env.DATABASE_USER}}
+          POSTGRES_DB: ${{env.DATABASE_NAME}}
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - name: ASDF cache
         uses: actions/cache@v2
@@ -58,6 +73,10 @@ jobs:
         run: mix format --check-formatted
       - name: Run tests
         run: mix test --cover
+        env:
+          POSTGRES_USERNAME: ${{env.DATABASE_USER}}
+          POSTGRES_PASSWORD: ${{env.DATABASE_PASSWORD}}
+          POSTGRES_HOSTNAME: ${{env.DATABASE_HOST}}
       - name: Save PR information
         run: |
           echo "${{ github.event.pull_request.number }}" > cover/PR_NUMBER
