--- a/assets/package.json
+++ b/assets/package.json
@@ -53,7 +53,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "file-loader": "^6.2.0",
     "fishery": "^1.3.1",
-    "jest": "^25.5.4",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^6.0.0",
@@ -64,7 +64,7 @@
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "terser-webpack-plugin": "^4.2.3",
-    "ts-jest": "^25.5.1",
+    "ts-jest": "^26.5.6",
     "ts-loader": "^8.0.3",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
@@ -102,7 +102,7 @@
     "collectCoverage": true,
     "globals": {
       "ts-jest": {
-        "tsConfig": "./tsconfig.test.json"
+        "tsconfig": "./tsconfig.test.json"
       }
     },
     "globalSetup": "./tests/global-setup.js"
