build(ci): try basic TypeScript build

--- a/.github/workflows/report-coverage.yml
+++ b/.github/workflows/report-coverage.yml
@@ -3,7 +3,7 @@ name: Report Elixir Coverage
 on:
   workflow_run:
     workflows:
-      - Elixir CI
+      - Elixir and TypeScript CI
     types:
       - completed
 
