--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: Elixir CI
+name: Elixir and TypeScript CI
 
 on: [push, pull_request]
 
 jobs:
-  asdf:
-    name: ASDF
+  setup:
+    name: ASDF and Elixir dependencies
     runs-on: ubuntu-latest
 
     steps:
@@ -19,11 +19,32 @@ jobs:
       # only run `asdf install` if we didn't hit the cache
       - uses: asdf-vm/actions/install@v1
         if: steps.asdf-cache.outputs.cache-hit != 'true'
+      - name: Setup ASDF environment
+        run: |
+          ASDF_DIR=$HOME/.asdf
+          echo "ASDF_DIR=$ASDF_DIR" >> $GITHUB_ENV
+          echo "ASDF_DATA_DIR=$ASDF_DIR" >> $GITHUB_ENV
+          echo "$ASDF_DIR/bin" >> $GITHUB_PATH
+          echo "$ASDF_DIR/shims" >> $GITHUB_PATH
+          $ASDF_DIR/bin/asdf reshim
+      - name: Restore dependencies cache
+        id: deps-cache
+        uses: actions/cache@v2
+        with:
+          path: deps
+          key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+          restore-keys: ${{ runner.os }}-mix-
+      - name: Install dependencies
+        if: steps.deps-cache-outputs-cache-hit != 'true'
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
 
-  build:
-    name: Build and test
+  build_elixir:
+    name: Build and test Elixir
     runs-on: ubuntu-latest
-    needs: asdf
+    needs: setup
     env:
       DATABASE_PASSWORD: postgres
       DATABASE_USER: postgres
@@ -62,11 +83,6 @@ jobs:
           path: deps
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
           restore-keys: ${{ runner.os }}-mix-
-      - name: Install dependencies
-        run: |
-          mix local.rebar --force
-          mix local.hex --force
-          mix deps.get
       - name: Compile (warnings as errors)
         run: mix compile --force --warnings-as-errors
       - name: Check formatting
@@ -88,3 +104,37 @@ jobs:
           name: elixir-lcov
           path: cover/
       - uses: mbta/actions/dialyzer@v1
+
+  build_typescript:
+    name: Build and test TypeScript
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: ASDF cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.asdf
+          key: ${{ runner.os }}-asdf-v2-${{ hashFiles('.tool-versions') }}
+        id: asdf-cache
+      - name: Setup ASDF environment
+        run: |
+          ASDF_DIR=$HOME/.asdf
+          echo "ASDF_DIR=$ASDF_DIR" >> $GITHUB_ENV
+          echo "ASDF_DATA_DIR=$ASDF_DIR" >> $GITHUB_ENV
+          echo "$ASDF_DIR/bin" >> $GITHUB_PATH
+          echo "$ASDF_DIR/shims" >> $GITHUB_PATH
+          $ASDF_DIR/bin/asdf reshim
+      - uses: actions/checkout@v2
+      - name: Restore dependencies cache
+        id: deps-cache
+        uses: actions/cache@v2
+        with:
+          path: deps
+          key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+          restore-keys: ${{ runner.os }}-mix-
+      - name: Install dependencies
+        run: pushd assets && npm ci && popd
+      - name: Check types / linting / formatting
+        run: pushd assets && npm run check && popd
+      - name: Run tests
+        run: pushd assets && npm test && popd
