--- a/assets/package.json
+++ b/assets/package.json
@@ -24,6 +24,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "pigeon-maps": "^0.19.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.8.0",
