--- a/assets/package.json
+++ b/assets/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@sentry/webpack-plugin": "^1.17.2",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/enzyme": "^3.10.9",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -50,6 +51,7 @@
     "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-test-renderer": "^17.0.1",
+    "@testing-library/user-event": "^13.5.0",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^5.2.7",
     "enzyme": "^3.11.0",
