--- a/assets/package.json
+++ b/assets/package.json
@@ -75,7 +75,7 @@
     "tslint-react": "^5.0.0",
     "tslint-react-hooks": "^2.2.2",
     "typescript": "^3.9.7",
-    "webpack": "4.46.0",
+    "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
   "jest": {
