--- a/assets/package.json
+++ b/assets/package.json
@@ -51,32 +51,32 @@
     "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-test-renderer": "^17.0.1",
-    "copy-webpack-plugin": "^6.4.1",
-    "css-loader": "^5.2.7",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "file-loader": "^6.2.0",
     "fishery": "^2.1.0",
     "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.6.2",
+    "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^6.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.5.1",
     "react-test-renderer": "^16.14.0",
-    "sass-loader": "^10.2.0",
+    "sass-loader": "^12.6.0",
     "svg-inline-loader": "^0.8.2",
     "svgo": "^2.8.0",
     "svgo-loader": "^3.0.0",
-    "terser-webpack-plugin": "^4.2.3",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-jest": "^26.5.6",
-    "ts-loader": "^8.0.3",
+    "ts-loader": "^9.2.7",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^5.0.0",
     "tslint-react-hooks": "^2.2.2",
     "typescript": "^3.9.7",
-    "webpack": "4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   },
   "jest": {
     "clearMocks": true,
