--- a/assets/package.json
+++ b/assets/package.json
@@ -37,6 +37,7 @@
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
