--- a/assets/package.json
+++ b/assets/package.json
@@ -59,6 +59,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.4",
     "file-loader": "^6.2.0",
     "fishery": "^2.2.2",
     "jest": "^26.6.3",
