--- a/assets/package.json
+++ b/assets/package.json
@@ -10,8 +10,8 @@
     "test:update": "jest -u",
     "test:debugger": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "check": "tsc --noEmit && npm run lint:check && npm run format:check",
-    "lint": "tslint --fix -p .",
-    "lint:check": "tslint -p .",
+    "lint": "eslint --fix \"{.,**}/*.{js,json,ts,tsx}\"",
+    "lint:check": "eslint \"{.,**}/*.{js,json,ts,tsx}\"",
     "format": "prettier --write \"{.,**}/*.{js,json,ts,tsx,css,scss}\"",
     "format:check": "prettier --check \"{.,**}/*.{js,json,ts,tsx,css,scss}\""
   },
@@ -51,10 +51,15 @@
     "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.4",
     "file-loader": "^6.2.0",
     "fishery": "^2.2.2",
     "jest": "^26.6.3",
@@ -70,10 +75,6 @@
     "terser-webpack-plugin": "^5.3.1",
     "ts-jest": "^26.5.6",
     "ts-loader": "^9.2.8",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^5.0.0",
-    "tslint-react-hooks": "^2.2.2",
     "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
